# Scriba

./: Cargo.toml  LICENSE  README.md
frontend/Deluxe/templates/: index.html  post.html
src/: main.rs
src/database/: handlers.rs  mod.rs
src/routes/: index.rs  mod.rs  post.rs
src/templates/: html.rs  mod.rs
