[package]
name = "scriba"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["handlebars_templates"] }

[dependencies.diesel]
version = "1.4.5"
features = ["postgres"]

[dependencies.dotenv]
version = "0.15.0"

[dependencies.handlebars]
version = "4.3.6"